recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:12: error: Unit does not take parameters
	carre(); carre(); carre();carre()
             ^FourSquare:12: error: Unit does not take parameters
	carre(); carre(); carre();carre()
                      ^FourSquare:12: error: Unit does not take parameters
	carre(); carre(); carre();carre()
                               ^FourSquare:12: error: Unit does not take parameters
	carre(); carre(); carre();carre()
                                       ^